--- a/WebApplication1/Views/Home/Contact.cshtml
+++ b/WebApplication1/Views/Home/Contact.cshtml
@@ -5,13 +5,11 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    Long Beach Boulevard<br />
+    Long Beach, CA 90865<br />
+    <strong>Phone Number: </strong><a href="tel:855-123-4567">(855) 123-4567</a>
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Email: </strong><a href="mailto:longbeachanimalshelter@animalshelter.com">longbeachanimalshelter@animalshelter.com</a><br />
 </address>
