changes on homepage

--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -7,26 +7,124 @@
     <p class="lead">Welcome to the Long Beach Animal Shelter Webpage!</p>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>About us</h2>
-        <p>
 
-        </p>
-        <p><a class="btn btn-default" href="#">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Adopt</h2>
-        <p>
+<main>
 
-        </p>
-        <p><a class="btn btn-default" href="#">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Find your pet</h2>
-        <p>
+    <div class="row">
 
-        </p>
-        <p><a class="btn btn-default" href="#">Learn more &raquo;</a></p>
-    </div>
-</div>
+        <section class="column">
+            <h3>Adobt</h3>
+
+            <!-- slideShow
+                  <div class="SSFrame">
+                          <span id="SSimg1"></span>
+                          <span id="SSimg2"></span>
+                          <span id="SSimg3"></span>
+                          <span id="SSimg4"></span>
+
+            <!-- images for slideShow
+                              <img src="https://topdogtips.com/wp-content/uploads/2017/09/Best-Animal-Shelters-2.jpg" class="slider-image" />
+                              <img src="http://www.thepetmatchmaker.com/wp-content/uploads/2014/07/LACatShelter-4.jpg" class="slider-image" />
+                              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNK0Fi6ZHCQbhMujkaoZRdkzDXzAd1z8raeMYdFNAen9-N_srSPw" class="slider-image" />
+                              <img src="https://www.bwar.org/wp-content/uploads/2015/08/dante-and-luci-small.jpg" class="slider-image" />
+
+                          </div>
+
+                          <div class="SSbuttonFrame">
+                              <a href="#SSimg1" class="slider-change"></a>
+                              <a href="#SSimg2" class="slider-change"></a>
+                              <a href="#SSimg3" class="slider-change"></a>
+                              <a href="#SSimg4" class="slider-change"></a>
+                          </div>
+                </div>
+              -->
+
+
+        </section>
+
+        <section class="column">
+            <h3>Recently Found</h3>
+            <!-- gallary -->
+
+            <div class="gallery">
+                <a target="_blank" href="img_fjords.jpg">
+                    <img src="http://www.trbimg.com/img-584f3ae0/turbine/ct-ptb-pets-in-shelters-st-1212-20161212" alt="found animal" width="300" height="200">
+                </a>
+                <div class="desc">Add a description of the image here</div>
+            </div>
+
+            <div class="gallery">
+                <a target="_blank" href="img_forest.jpg">
+                    <img src="https://static.youcaring.com/api/uploads/fundraisers/469759/63a751c1-30db-4b1f-a421-f62a7fb8679b_profile.jpg" alt="found" width="600" height="400">
+                </a>
+                <div class="desc">Add a description of the image here</div>
+            </div>
+
+            <div class="gallery">
+                <a target="_blank" href="img_lights.jpg">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRW80s76eB_10yoKnx9QgRM3oZhuz0WAWnAqPpm5LZmtIFKITwD" alt="found " width="600" height="400">
+                </a>
+                <div class="desc">Add a description of the image here</div>
+            </div>
+
+            <div>
+                <a style="padding: 10px;" href="#" class="highlights--button">See more pets</a>
+            </div>
+
+        </section>
+
+
+        <div class="row">
+
+            <section class="column62">
+                <h2>
+                    Stories</h3>
+
+                    <article>
+                        <div class="highlights--container">
+                            <div class="highlights--media">
+                                <img src="https://i.pinimg.com/originals/5d/2d/11/5d2d11f83b251ad0e4c761bc8d20512e.jpg" alt="kid found his dog">
+                            </div>
+                            <div class="highlights--text">
+                                <h4>Kid found his dog</h4>
+                                <p><em>Alexandra with Cucumba, 2/21/2018</em></p>
+                                <p>We finaly found our dog Cucumba at the beach. He was crying because a lobster bit him, the lobster bit him because he was hungry. Alexandra, 9. Wamboin. One day when I got back from school, I suddenly noticed my pet dog Lucky was missing.</p>
+                                <a href="#" class="highlights--button">Read More About This</a>
+                            </div>
+
+                    </article>
+
+            </section>
+
+            <section class="column33">
+                <h3>Sign Up</h3>
+
+                <div class="container">
+                    <form action="/SignUp.php">
+
+                        <label for="fname">First Name</label>
+                        <input type="text" id="fname" name="firstname" placeholder="Your first name..">
+
+                        <label for="lname">Last Name</label>
+                        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+                        <label for="mail">E-mail</label>
+                        <input type="text" id="mail" name="E-mail" placeholder="Your E-mail..">
+
+                        <label for="phone">Phone Number</label>
+                        <input type="text" id="phone" name="Phone Number" placeholder="Your Phone Number..">
+
+                        <label for="State">State</label>
+                        <input type="text" id="State" name="State" placeholder="Your State..">
+
+                        <label for="ZipCode">Zip Code</label>
+                        <input type="text" id="ZipCode" name="Zip Code" placeholder="Your Zip Code..">
+
+                        <input type="submit" value="Sing Up">
+                    </form>
+                </div>
+            </section>
+
+        </div>
+
+</main>
