--- a/WebApplication1/Content/HomePage.css
+++ b/WebApplication1/Content/HomePage.css
@@ -23,14 +23,12 @@ header {
 }
 
 .column62 {
-
     float: left;
     width: 60%;
     padding: 2%;
 }
 
 .column33 {
-
     float: left;
     width: 32%;
     padding: 2%;
@@ -40,7 +38,6 @@ header {
     content: "";
     display: table;
     clear: both;
-
 }
 
 .container {
@@ -106,33 +103,33 @@ h4 {
     padding: 1% 5%;
 }
 
-#title p {
-    font-style: italic;
-}
+    #title p {
+        font-style: italic;
+    }
 
 nav {
     background-color: #3f51b5;
 }
 
-nav li {
-    display: inline;
-    padding-right: 2%;
-}
+    nav li {
+        display: inline;
+        padding-right: 2%;
+    }
 
-nav a ,footer a{
-    color: #ffffff;
-    font-size: 120%;
-}
+    nav a, footer a {
+        color: #ffffff;
+        font-size: 120%;
+    }
 
-nav a:hover {
-    background-color: #F50057;
-    padding: 1%;
-    color: #ffffff;
-}
+        nav a:hover {
+            background-color: #F50057;
+            padding: 1%;
+            color: #ffffff;
+        }
 
-nav ul {
-    padding: .5% 5%;
-}
+    nav ul {
+        padding: .5% 5%;
+    }
 
 
 /* figure styling */
@@ -205,16 +202,18 @@ figure img {
 }
 
 
-.highlights--media{
-    float:left;
+.highlights--media {
+    float: left;
 }
 
-.highlights--media img{
-width:300px;height:300px;margin-right:15px;
-}
+    .highlights--media img {
+        width: 300px;
+        height: 300px;
+        margin-right: 15px;
+    }
 
-.highlights--button{
-    float:right;
+.highlights--button {
+    float: right;
 }
 
 /* gallary */
@@ -226,15 +225,15 @@ div.gallery {
     width: 180px;
 }
 
-div.gallery:hover {
-    border: 1px solid #777;
-}
+    div.gallery:hover {
+        border: 1px solid #777;
+    }
 
-div.gallery img {
-    width: 100%;
-    height: auto;
-    float:left;
-}
+    div.gallery img {
+        width: 100%;
+        height: auto;
+        float: left;
+    }
 
 div.desc {
     padding: 10px;
@@ -242,9 +241,3 @@ div.desc {
 }
 
 
-
-/* footer style */
-footer {
-    background-color: #1a237e;
-    color: #ffffff;
-}
