--- a/WebApplication1/Views/Pets/Index.cshtml
+++ b/WebApplication1/Views/Pets/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Lost Pets";
 }
 
-<h2>Index</h2>
+<h2>Temporary Index of Lost Pets</h2>
 
 <p>
     @Html.ActionLink("Add New Lost Pet", "Create")
