--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Changed home page";
+    ViewBag.Title = "Home";
 }
 
 <div class="jumbotron">
@@ -13,7 +13,7 @@
     Our goal is all animals, who are in need of a forever home, are given opportunity for a home and family to given them the best care and shown boundless love with their new family. Also, we hope for increasing support for the animal population.
 </p>
 
-<h2><span>Adobt Animals</span></h2>
+<h2><span>Adopt Animals</span></h2>
 <div class="Animals">
     <img src="https://topdogtips.com/wp-content/uploads/2017/09/Best-Animal-Shelters-2.jpg">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNK0Fi6ZHCQbhMujkaoZRdkzDXzAd1z8raeMYdFNAen9-N_srSPw">
@@ -31,10 +31,8 @@
 
 </div>
 
-
+<h2><span>Stories</span></h2>
 <div class="row">
-
-    <h2><span>Stories</span></h2>
     <article>
         <div class="highlights--container">
             <div class="highlights--media">
@@ -44,6 +42,8 @@
                 <h4>Kid found his dog</h4>
                 <p><em>Alexandra with Cucumba, 2/21/2018</em></p>
                 <p>We finaly found our dog Cucumba at the beach. He was crying because a lobster bit him, the lobster bit him because he was hungry. Alexandra, 9. Wamboin. One day when I got back from school, I suddenly noticed my pet dog Lucky was missing.</p>
-                <a href="#" class="highlights--button">Read More About This</a>
+                <!--<a href="#" class="highlights--button">Read More About This</a>-->
             </div>
+        </div>
     </article>
+</div>
