--- a/WebApplication1/Views/Home/Catalogue.cshtml
+++ b/WebApplication1/Views/Home/Catalogue.cshtml
@@ -9,21 +9,21 @@
             <h3><b>DOG NAME</b></h3>
         </div>
         <img src="~/perro.jpg"  class="image-template"/> 
-        <button class="button-template"> More info</button>
+        <button class="button-template">@Html.ActionLink("Adopt", "Adopt", "Home", new { area = "" })</button>
     </div>
     <div class="col-4-2 jumb">
         <div class="template-text">
             <h3><b>DOG NAME</b></h3>
         </div>
         <img src="~/perro2.jpg" class="image-template" />
-        <button class="button-template"> More info</button>
+        <button class="button-template">@Html.ActionLink("Adopt", "Adopt", "Home", new { area = "" })</button>
     </div>
     <div class="col-4-2 jumb">
         <div class="template-text">
             <h3><b>DOG NAME</b></h3>
         </div>
         <img src="~/perro3.jpg" class="image-template" />
-        <button class="button-template"> More info</button>
+        <button class="button-template">@Html.ActionLink("Adopt", "Adopt", "Home", new { area = "" })</button>
     </div>
 </div>
 
