--- a/WebApplication1/Views/Pets/Create.cshtml
+++ b/WebApplication1/Views/Pets/Create.cshtml
@@ -6,59 +6,60 @@
 
 <h2>Report a disappearance</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Create", "Pets", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>Lost Pet</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-        @*  This will be enabled once i fix breed select list.
-                <div class="form-group">
-                @Html.LabelFor(model => model.BreedID, "BreedID",  htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.DropDownList("BreedID", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.BreedID, "", new { @class = "text-danger" })
-                </div>
-            </div>*@
-
-        <div class="form-group">
-            <label for="AnimalName" class="col-md-2 control-label">Animal Name:</label>
-            @*@Html.LabelFor(model => model.PetName, htmlAttributes: new { @class = "control-label col-md-2" })*@
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PetName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PetName, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label for="Age" class="col-md-2 control-label">Age:</label>
-            @*@Html.LabelFor(model => model.PetAge, htmlAttributes: new { @class = "control-label col-md-2" })*@
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PetAge, new { htmlAttributes = new { @class = "form-control", @min = "0", @max = "99" } })
-                @Html.ValidationMessageFor(model => model.PetAge, "", new { @class = "text-danger" })
-            </div>
-        </div>
+<div class="form-horizontal">
+    <h4>Lost Pet</h4>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
 
 
-        <div class="form-group">
-            <label for="Description" class="col-md-2 control-label">Description:</label>
-            @*@Html.LabelFor(model => model.PetDescription, htmlAttributes: new { @class = "control-label col-md-2" })*@
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PetDescription, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PetDescription, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Report" class="btn btn-default" />
-            </div>
+    <div class="form-group">
+        <label for="AnimalName" class="col-md-2 control-label">Animal Name:</label>
+        @*@Html.LabelFor(model => model.PetName, htmlAttributes: new { @class = "control-label col-md-2" })*@
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.PetName, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.PetName, "", new { @class = "text-danger" })
         </div>
     </div>
+
+    <div class="form-group">
+        <label for="Age" class="col-md-2 control-label">Age:</label>
+        @*@Html.LabelFor(model => model.PetAge, htmlAttributes: new { @class = "control-label col-md-2" })*@
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.PetAge, new { htmlAttributes = new { @class = "form-control", @min = "0", @max = "99" } })
+            @Html.ValidationMessageFor(model => model.PetAge, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+
+
+    <div class="form-group">
+        <label for="Description" class="col-md-2 control-label">Description:</label>
+        @*@Html.LabelFor(model => model.PetDescription, htmlAttributes: new { @class = "control-label col-md-2" })*@
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.PetDescription, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.PetDescription, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <fieldset>
+        <legend>Image</legend>   
+        <div class="editor-field">
+            <input id="ImagePath" title="Upload a product image"
+                   type="file" name="file" />
+        </div>
+    </fieldset>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Report" class="btn btn-default" />
+        </div>
+    </div>
+</div>
 }
 
 <div>
