--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -76,7 +76,7 @@
                         <li>
                             <span class="font-weight-bold">Lost Animals</span>
                             <ul class="px-2">
-                                <li><a href="#!">Map</a></li>
+                                <li>@Html.ActionLink("Map", "Map", "Map")</li>
                                 <li>
                                     Inform
                                     <ul class="px-2">
