--- a/WebApplication1/Views/Pets/Create.cshtml
+++ b/WebApplication1/Views/Pets/Create.cshtml
@@ -46,6 +46,15 @@
         </div>
     </div>
 
+    <div class="form-group">
+        <label for="Address" class="col-md-2 control-label">Address:</label>
+        @*@Html.LabelFor(model => model.PetDescription, htmlAttributes: new { @class = "control-label col-md-2" })*@
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
     <fieldset>
         <legend>Image</legend>   
         <div class="editor-field">
