fixed EDIT, Added Adoption manage page, Connected Catalogue to adoption dataset

--- a/WebApplication1/Views/Pets/Index.cshtml
+++ b/WebApplication1/Views/Pets/Index.cshtml
@@ -45,6 +45,7 @@
         <td>
         
             @Html.ActionLink("Details", "Details", new { id = item.PetsId }) |
+            @Html.ActionLink("Edit","Edit", new { id = item.PetsId})|
             @Html.ActionLink("Delete", "Delete", new { id = item.PetsId })
         </td>
     </tr>
