--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                 <li class="nav-item">@Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                <li class="nav-item">@Html.ActionLink("Adopt", "Catalogue", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                <li class="nav-item">@Html.ActionLink("Adopt", "Catalogue", "Adopt", new { area = "" }, new { @class = "nav-link" })</li>
                 <li class="nav-item">@Html.ActionLink("Lost animal", "Index", "Pets", new { area = "" }, new { @class = "nav-link" })</li>
                 <li class="nav-item">@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
             </ul>
@@ -82,6 +82,7 @@
                                     <ul class="px-2">
                                         <li>@Html.ActionLink("Found", "FoundAnimal", "Pets")</li>
                                         <li>@Html.ActionLink("Lost", "Index", "Pets")</li>
+                                        <li>@Html.ActionLink("Management","Index", "Adopt")</li>
                                     </ul>
                                 </li>
                             </ul>
