--- a/WebApplication1/Views/Pets/Edit.cshtml
+++ b/WebApplication1/Views/Pets/Edit.cshtml
@@ -15,6 +15,7 @@
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.PetsId)
+    @Html.HiddenFor(model => model.ImagePath)
     <div class="form-group">
         @Html.LabelFor(model => model.PetName, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
