--- a/WebApplication1/Views/Home/About.cshtml
+++ b/WebApplication1/Views/Home/About.cshtml
@@ -1,7 +1,18 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>About Us</h2>
+<h3>Mission Statement</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>
+    The basic mission of the Long Beach Animal Shelter is to offer gentle animal caring through provides them a safe and happy home with family.
+    We also help human for finding their lost pets or have a beautiful pet to make them happier. We are keen on serving, looking after and sheltering homeless companion animals.
+</p>
+
+<br>
+<h3>Core tasks: </h3>
+<ul>
+    <li>Find your lost Pet</li>
+    <li>Adobt a pet </li>
+    <li>Found Pet</li>
+</ul>
