--- a/WebApplication1/Views/Home/Contact.cshtml
+++ b/WebApplication1/Views/Home/Contact.cshtml
@@ -1,8 +1,16 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>Contact US</h2>
+<h3>Contact us here to provide you with more information, answer any questions</h3>
+
+<header>
+    <img src="https://cityofallen.org/ImageRepository/Path?filePath=%2FDocuments%5CContent%5C123%2F1020161527_HDR.jpg" class="banner" alt="" />
+    <div class="banner--title">
+        <h1>Contact US</h1>
+        <h2>contact us here to provide you with more information, answer any questions</h2>
+    </div>
+</header>
 
 <address>
     Long Beach Boulevard<br />
