--- a/WebApplication1/Views/Home/About.cshtml
+++ b/WebApplication1/Views/Home/About.cshtml
@@ -9,10 +9,9 @@
     We also help human for finding their lost pets or have a beautiful pet to make them happier. We are keen on serving, looking after and sheltering homeless companion animals.
 </p>
 
-<br>
-<h3>Core tasks: </h3>
+<h4>Core tasks: </h4>
 <ul>
     <li>Find your lost Pet</li>
-    <li>Adobt a pet </li>
+    <li>Adopt a pet </li>
     <li>Found Pet</li>
 </ul>
