--- a/WebApplication1/Views/Home/Contact.cshtml
+++ b/WebApplication1/Views/Home/Contact.cshtml
@@ -4,14 +4,6 @@
 <h2>Contact US</h2>
 <h3>Contact us here to provide you with more information, answer any questions</h3>
 
-<header>
-    <img src="https://cityofallen.org/ImageRepository/Path?filePath=%2FDocuments%5CContent%5C123%2F1020161527_HDR.jpg" class="banner" alt="" />
-    <div class="banner--title">
-        <h1>Contact US</h1>
-        <h2>contact us here to provide you with more information, answer any questions</h2>
-    </div>
-</header>
-
 <address>
     Long Beach Boulevard<br />
     Long Beach, CA 90865<br />
@@ -21,3 +13,5 @@
 <address>
     <strong>Email: </strong><a href="mailto:longbeachanimalshelter@animalshelter.com">longbeachanimalshelter@animalshelter.com</a><br />
 </address>
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3316.5626339469127!2d-118.16162833490189!3d33.77196618068309!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dd31081f54dccb%3A0xbab396aeb128e9e9!2s7263023024%2C+Long+Beach%2C+CA+90814!5e0!3m2!1ses!2sus!4v1525122974660" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
